--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,9 @@ import ContactForm from '../components/ContactForm.astro';
         <section class="loader absolute z-40 h-[100vh] w-[100vw]">
             <div class="second w-full h-full flex items-center justify-center ">
                 <div class=" flex flex-col gap-4 items-center pointer-events-none">
-                    <div class="picture"><img class="w-full h-full object-cover" src="/assets/hero_img4.png"/></div>
+                    <div class="picture">
+						<img class="w-full h-full object-cover" src="/assets/hero_img4.png"/>
+					</div>
                 </div>
             </div>
 		</section>
