--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -14,9 +14,10 @@ import CompareProducts from "../../components/CompareProducts.astro";
 import BrandFeatures from "../../components/BrandFeatures.astro";
 import Navbar2 from "../../components/Navbar2.astro";
 import StatisticsGrid from "../../components/StatisticsGrid.astro";
+
 ---
 <Layout title="CX-Point">
-<!-- <div class="w-full h-full bg-[#E7E7D6] ">
+<div class="w-full h-full bg-[#E7E7D6] ">
     <Navbar2/>
     <div class="w-full h-screen flex flex-col justify-evenly px-4 pt-40 lg:px-20 lg:pt-20">
         <div>
@@ -41,12 +42,12 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
             <div class="w-full h-full overflow-hidden flex flex-col lg:flex-row items-start justify-between gap-10 rounded-2xl pt-8 lg:pt-0 lg:py-5">
                 <div class="w-full lg:w-[40%] h-[200px] rounded-tr-3xl rounded-bl-3xl px-10 animated-text overflow-hidden"> -->
                     <!-- <video autoplay muted loop src={video} class="w-full h-full object-cover scale-150"></video> -->
-                     <!-- <img src="/assets/Mockup-1.jpg" alt="mockup" class="w-full h-full object-cover scale-150">
+                     <img src="/assets/Mockup-1.jpg" alt="mockup" class="w-full h-full object-cover scale-150">
                 </div>
                 <div class="lg:w-[60%] h-full flex flex-col justify-center gap-4 lg:gap-0 lg:justify-between">
                     <div class="w-full h-fulloverflow-hidden ">
                         <p class="median text-center lg:text-right text-[17px] animated-text text-black">
-                            At CXPoint, we offer cutting-edge Ai based automation tools designed to revolutionize customer experiences and contact center products across all industries. Our AI based solutions empower Contact center agents with intuitive interfaces, enabling faster operations, better platform management and reducing manual workload. Business leaders benefit from enhanced AI based analytics, gain technical insights, helping business teams to make data-driven decisions that supports on their contact center transformation and migration journey.​For contact center developers, our seamless integration capabilities allow for easy implementation of advanced automation features without disrupting existing Contact center systems. Our partnership with leading service integrators (SI) globally can quickly enable them to customize CXPoint to fit any customer environment, streamlining operations, development and maintenance processes and enhancing overall service delivery.
+                            At CXPoint, we offer cutting-edge Ai based automation tools designed to revolutionize customer experiences and contact center products across all industries. Our AI based solutions empower Contact center agents with intuitive interfaces, enabling faster operations, better platform management and reducing manual workload.
                         </p>
                     </div>
                     <div class="w-full h-fit lg:h-full flex items-end justify-center lg:justify-end">
@@ -58,18 +59,18 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
             </div>
         </div>
     </div>
-    <StatisticsGrid /> -->
+    <StatisticsGrid />
     <!-- <StackingCards /> -->
-    <!-- <Stats />
+    <Stats />
     <ProductSections/>
 
   
     <ProductCard /> 
-    <BrandFeatures/> -->
-    <!-- <CompareProducts/> -->
-    <!-- <CTAPage />
-    <Pricing /> -->
-    <div class="w-full min-h-screen flex items-center justify-center bg-[#E7E7D6]">
+    <BrandFeatures/>
+    <CompareProducts/>
+    <CTAPage />
+    <Pricing />
+    <!-- <div class="w-full min-h-screen flex items-center justify-center bg-[#E7E7D6]">
         <div class="text-center">
             <h1 class="text-4xl md:text-6xl lg:text-8xl font-bold akira mb-4">
                 Realising Soon
@@ -78,9 +79,9 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                 We're working on something exciting. Stay tuned!
             </p>
         </div>
-    </div>
+    </div> -->
     <Footer/>
-<!-- </div> -->
+</div>
 </Layout>
 
 
