--- a/src/components/BrandFeatures.astro
+++ b/src/components/BrandFeatures.astro
@@ -5,40 +5,46 @@ const brandingFeatures = [
         title: "VOYAGE",
         description: "Streamline your workflow with comprehensive file management and analysis tools designed for optimal performance.",
         features: [
-            "SCXML/ VXML File upload to and from workspace",
-            "Flow Summary generation",
-            "Audio file transcription and playback",
-            "Notification for Upgrade",
-            "CSV"
+            "On premise Contact Center Platforms configuration discovery",
+            "Automatic call center Telephony object discovery",
+            "Discovery of on-premise call flows and routing flows( vxml and scxml support)",
+            "Call flow summarization for each legacy composer projects",
+            "Bulk flow uploads directly to cloud​",
+            "Call and workflow comparison, call flow journey mapping",
+            "Prompt transcribe and verbiage management",
+            "Prompt migration from legacy to Genesys cloud​"
         ]
     },
     {
         title: "NEXA",
         description: "Experience real-time monitoring and secure automation with our advanced integration capabilities.",
         features: [
-                "User Management",
-            "Role Management",
-            "Division Management",
-            "Queue Management",
-            "Skill Management",
-            "Language Management",
-        "Call Routing Management",
-        "Emergency Groups Management",
-                "Schedule Management",
-            "Prompts Management",
+                "Bulk and automated management of objects in Genesys cloud",
+            "Management of Language, Call Routing, Emergency Groups, Schedule Management, Production Prompts",
+            "Additional features include secure role-based access, End to end encryption, Admin dashboard, AD Authentication",
+            "Inbuilt support for SSO, MFA, AD, User Configuration and Activity reporting",
+            "GDPR compliant",
+            "Platform Uptime status and monitoring",
+            "Dashboard and reporting, Nexa workspace Management",
+            "Help documentation"
         ]
     },
     {
         title: "COMMON FEATURES",
         description: "Develop a comprehensive brand manual that outlines how to use your brand elements consistently across all platforms. This guide ensures that your messaging and visuals are uniform, helping to build a strong, trustworthy brand that communicates effectively with your audience.",
         features: [
-            "AD based authentication",
-            "GDPR compliant",
-            "Supports integration with Leading contact centers",
-            "Role based access",
-            "End to End encryption",
-            "Raise support tickets",
-            "Platform Uptime status and monitoring"
+            "Subscription plan management",
+            "Online secure billing subscriptions via Stripe",
+            "Services uptime status and monitoring",
+            "Compliance Settings and controls",
+            "System Logging",
+            "Integration with applications",
+            "Roles for granular permissions",
+            "User Profile Configuration",
+            "Support services",
+            "Admin Reporting",
+            "Notification Control",
+            "24 x 7 support ticket, Monitoring"
         ]
     },
     {
