--- a/src/components/ProductSections.astro
+++ b/src/components/ProductSections.astro
@@ -1,8 +1,9 @@
 ---
 import astrix from "../../public/assets/whiteAsterisk.png"
-import firstImage from "../../public/assets/first-card.png"
-import secondImage from "../../public/assets/second-card.png"
-import thirdImage from "../../public/assets/third-card.png"
+import firstImage from "../../public/assets/ProductsPage_AX Xperience01.png"
+import secondImage from "../../public/assets/ProductsPage_BX Xperience01.png"
+import thirdImage from "../../public/assets/ProductsPage_CX Xperience01.png"
+import fourthImage from "../../public/assets/ProductsPage_DX Xperience01.png"
 
 ---
 
@@ -36,8 +37,8 @@ import thirdImage from "../../public/assets/third-card.png"
                 <img src={astrix.src} alt="asterisk" class="w-[20%] ">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-clock">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-anticlock"> -->
-                <div class="w-full h-full flex items-center justify-center overflow-hidden">
-                    <img src={firstImage.src} class="w-full h-full object-fit">
+                <div class="w-full h-full flex items-center justify-center overflow-hidden rounded-bl-[10rem]">
+                    <img src={firstImage.src} class="w-full h-full object-cover object-center">
                 </div>
             </div>
         </div>
@@ -58,17 +59,17 @@ import thirdImage from "../../public/assets/third-card.png"
                         First Impressions matter
                     </p>
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
-                        Your website, product, or branding is the first interaction potential customers have with your business.A professional design creates a strong, positive first impression, leading to increased trust and credibility.
+                        CXPoint products for Cloud contact centers help improve the business experience in your contact centers by optimizing operational efficiency, reducing costs, improving scalability, and enhancing both your customer satisfaction and agent productivity
                     </p>
                 </div>
                 
                 <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-4">
-                    A well designed website can make a lasting impression, setting the stage for long-term success.
+                    By automating routine tasks, businesses can free up resources for more strategic initiatives, allowing them to improve performance, reduce overhead, and ultimately offer better service to customers.
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] md:flex hidden items-start justify-center">
-                <div class="w-full h-full flex items-center justify-center overflow-hidden">
-                    <img src={secondImage.src} class="w-full h-full object-fit">
+                <div class="w-full h-full flex items-center justify-center overflow-hidden rounded-bl-[10rem]">
+                    <img src={secondImage.src} class="w-full h-full object-cover object-center">
                 </div>
             </div>
         </div>
@@ -88,13 +89,13 @@ import thirdImage from "../../public/assets/third-card.png"
                     <p class="text-[#FF6D00] text-[1.2rem] font-bold mb-2">
                         First Impressions matter
                     </p>
-                    <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
-                        When done correctly, Automation in contact centers significantly improves customer experience by offering faster response times, 24/7 availability, consistent and accurate information, and more personalized service. It empowers customers through self-service options, reduces friction across channels, and helps businesses proactively address issues. 
+                    <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[90%] text-white/70">
+                        When done correctly, Automation in contact centers significantly improves customer experience by offering faster response times, 24/7 availability, consistent and accurate information, and more personalized service. It empowers customers through self-service options, reduces friction across channels, and helps businesses proactively address issues.
                     </p>
                 </div>
                 
-                <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-4">
-                    This leads to a better customer journey, higher loyalty, and ultimately, improved business performance which your business deserves.​
+                <p class="w-[90%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-4">
+                    Automation enhances both the efficiency of the contact center product and the overall satisfaction of your end customers leading to a better customer journeys, higher loyalty, and ultimately, improved CX which your business deserves.​
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] md:flex hidden items-start justify-center">
@@ -102,8 +103,8 @@ import thirdImage from "../../public/assets/third-card.png"
                 <img src={astrix.src} alt="asterisk" class="w-[20%] ">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-clock">
                 <img src={astrix.src} alt="asterisk" class="w-[20%] astrix-anticlock"> -->
-                <div class="w-full h-full flex items-center justify-center overflow-hidden">
-                    <img src={firstImage.src} class="w-full h-full object-fit">
+                <div class="w-full h-full flex items-center justify-center overflow-hidden rounded-bl-[10rem]">
+                    <img src={thirdImage.src} class="w-full h-full object-cover object-center">
                 </div>
             </div>
         </div>
@@ -133,8 +134,8 @@ import thirdImage from "../../public/assets/third-card.png"
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] md:flex hidden items-start justify-center">
-                <div class="w-full h-full flex items-center justify-center overflow-hidden">
-                    <img src={thirdImage.src} class="w-full h-full object-fit">
+                <div class="w-full h-full flex items-center justify-center overflow-hidden rounded-bl-[10rem]">
+                    <img src={fourthImage.src} class="w-full h-full object-cover object-center">
                 </div>
             </div>
         </div>
