--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -3,7 +3,7 @@ const astrix = '/assets/asterisk.png';
 import Layout from "../../layouts/Layout.astro";
 import StackingCards from '../../components/StackingCards.astro';
 import ProductCard from "../../components/ProductCard.astro";
-import video from '/assets/Prod_hero_video.mp4';
+import video from '../../public/assets/Prod_hero_video.mp4';
 import CTAPage from "../../components/CTAPage.astro";
 import ProductSections from "../../components/ProductSections.astro";
 import Stats from "../../components/Stats.astro";
