Product Page changes

--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -13,7 +13,7 @@ const services = [
   },
   {
     title: "NEXA – Smart Cloud Contact center software management platform​",
-    description: "Prototype your success with an amazing user experience and customer retention. We develop working products that not only function flawlessly but also captivate and retain customers, ensuring your app or SaaS is a hit.",
+    description: "Nexa revolutionizes the efficiencies of customer service teams by integrating experience and advanced AI capabilities together. It provides businesses with secure and scalable, flexible solutions for managing cloud contact center platforms across multiple regions and business operating groups/teams, ensuring efficient platform management and personalized experiences. ",
     image: secondCard
   },
   {
