--- a/src/components/ProductSections.astro
+++ b/src/components/ProductSections.astro
@@ -121,16 +121,16 @@ import fourthImage from "../../public/assets/ProductsPage_DX Xperience01.png"
                     </p>
                 </div>
                 <div class="flex flex-col mt-16">
-                    <p class="text-[#FF6D00] text-[1.2rem] font-bold">
+                    <!-- <p class="text-[#FF6D00] text-[1.2rem] font-bold">
                         First Impressions matter
-                    </p>
+                    </p> -->
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
-                        Your website, product, or branding is the first interaction potential customers have with your business.A professional design creates a strong, positive first impression, leading to increased trust and credibility.
+                        In a contact center, developer experience (DX) refers to how easily and efficiently developers can build, maintain, and integrate Cloud contact center platforms with enterprise systems to support customer service operations. 
                     </p>
                 </div>
                 
                 <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-4">
-                    A well designed website can make a lasting impression, setting the stage for long-term success.
+                    CXPoint plays a crucial role in improving DX by reducing repetitive tasks (like creating Skills, queues and so on to more complex ones), accelerating development and deployment cycles (migrating contact center telephony objects and configurations), streamlining system integrations, improving collaboration, and ensuring scalability.
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] md:flex hidden items-start justify-center">
