--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -26,12 +26,12 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                     <path d="M12.311 30.7873V21.195L3.95649 25.9911L0.862207 20.6535L9.21676 15.8574L0.862207 11.0612L3.95649 5.64626L12.311 10.4424V0.850127H18.577V10.4424L26.8541 5.64626L30.0258 11.0612L21.6712 15.8574L30.0258 20.6535L26.8541 25.9911L18.577 21.2724V30.7873H12.311Z" fill="black"></path>
                 </svg>
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[25px] lg:text-[80px] akira animated-text ">Success-Driven Stories</p>
+                    <p class="text-[25px] lg:text-[80px] akira animated-text ">AI driven automation to</p>
                 </div>
             </div>
             <div class="w-full ">
                 <div class="w-full h-full overflow-hidden">
-                    <p class="text-[25px] lg:text-[80px] akira animated-text"> for Ambitious leaders</p>
+                    <p class="text-[25px] lg:text-[80px] akira animated-text">elevate contact center experiences</p>
                 </div>
             </div>
             <div class="w-full h-full hidden lg:flex overflow-hidden">
@@ -47,7 +47,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                 <div class="lg:w-[60%] h-full flex flex-col justify-center gap-4 lg:gap-0 lg:justify-between">
                     <div class="w-full h-fulloverflow-hidden ">
                         <p class="median text-center lg:text-right text-[17px] animated-text text-black">
-                            At CXPoint, we offer cutting-edge Ai based automation tools designed to revolutionize customer experiences and contact center products across all industries. Our AI based solutions empower Contact center agents with intuitive interfaces, enabling faster operations, better platform management and reducing manual workload.
+                            Unlock the power of AI-based automation and revolutionize your customer interactions. Our cutting-edge solutions empower agents with intuitive interfaces, freeing up time for more meaningful connections and reducing manual workload. Gain valuable insights and make data-driven decisions with our advanced analytics capabilities. Plus, our seamless integration and customization options make it easy to implement our solutions with your existing systems. With CXPoint, you can optimize every touchpoint and drive growth by delivering exceptional customer experiences.
                         </p>
                     </div>
                     <div class="w-full h-fit lg:h-full flex items-end justify-center lg:justify-end">
